initial audio capture complete

--- a/pi/requirements.txt
+++ b/pi/requirements.txt
@@ -45,6 +45,8 @@ pydub==0.25.1
 Pygments==2.19.1
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
+PyYAML==6.0.2
 requests==2.32.4
 resampy==0.4.3
 rich==14.0.0
