basic frontend and backend for detections

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,13 @@
 # Bird Monitoring System .gitignore
 
+
+# =============================================================================
+# BirdNet-Analyzer
+# =============================================================================
+BirdNET-Analyzer/
+BirdNET-Analyzer/*
+
+
 # =============================================================================
 # Python
 # =============================================================================
