--- a/station/config/local_config.yaml
+++ b/station/config/local_config.yaml
@@ -1,6 +1,8 @@
 db_api:
-    url: "http://localhost:3002/"
+    url: "http://localhost:3002/api/stations/"
     api_key: "c069c1fb-aa87-4ac6-8359-15dafa25bb2d"
+    routes:
+        post_detection: "/detections/"
 
 paths:
     segments_dir: "data/segments"
