--- a/server/package.json
+++ b/server/package.json
@@ -18,12 +18,14 @@
   "author": "Chris Foreman",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.0.0",
     "express": "^5.1.0",
     "morgan": "^1.10.0",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "concurrently": "^9.2.0",
