--- a/station/requirements.txt
+++ b/station/requirements.txt
@@ -2,6 +2,7 @@ absl-py==2.3.0
 astunparse==1.6.3
 asyncio==3.4.3
 audioread==3.0.1
+bidict==0.23.1
 birdnetlib==0.18.0
 blinker==1.9.0
 certifi==2025.6.15
@@ -18,6 +19,7 @@ fonttools==4.58.4
 gast==0.6.0
 google-pasta==0.2.0
 grpcio==1.73.0
+h11==0.16.0
 h5py==3.14.0
 idna==3.10
 itsdangerous==2.2.0
@@ -52,12 +54,15 @@ Pygments==2.19.1
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
+python-engineio==4.12.2
+python-socketio==5.13.0
 PyYAML==6.0.2
 requests==2.32.4
 resampy==0.4.3
 rich==14.0.0
 scikit-learn==1.7.0
 scipy==1.15.3
+simple-websocket==1.1.0
 six==1.17.0
 sounddevice==0.5.2
 soundfile==0.13.1
@@ -72,6 +77,8 @@ tqdm==4.67.1
 typing_extensions==4.14.0
 urllib3==2.4.0
 watchdog==2.1.9
+websocket-client==1.8.0
 websockets==15.0.1
 Werkzeug==3.1.3
 wrapt==1.17.2
+wsproto==1.2.0
