--- a/station/config/local_config.yaml
+++ b/station/config/local_config.yaml
@@ -1,8 +1,10 @@
 db_api:
-    url: "http://192.168.0.37:3002/api/stations/"
+    url: "http://192.168.0.37:3002/api"
     api_key: "c069c1fb-aa87-4ac6-8359-15dafa25bb2d"
     routes:
-        post_detection: "/detections/"
+        detection: "/detections"
+        audio: "/audio"
+        station: "/stations"
 
 paths:
     segments_dir: "data/segments"
