--- a/station/config/remote_config.yaml
+++ b/station/config/remote_config.yaml
@@ -1,5 +1,6 @@
 station:
     id: "149cd7cd-350e-4a84-a3dd-f6d6b6afaf5f"
+    api_key: "c069c1fb-aa87-4ac6-8359-15dafa25bb2d"
     station_name: "Development Station"
     location:
       lat: 54.607868
@@ -11,3 +12,6 @@ detection_config:
     high_confidence_threshold: 0.5
     segment_duration: 10
     segment_overlap: 0
+
+species:
+    ignore_list: []
