--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.3.7",
     "chart.js": "^4.5.0",
     "chartjs-adapter-date-fns": "^3.0.0",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "formik": "^2.4.6",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
