Minor refactor of Analytics components and hooks for consistency. General update of frontend code base to reduce redundancy and increase readability

--- a/station/config/local_config.yaml
+++ b/station/config/local_config.yaml
@@ -5,6 +5,10 @@ db_api:
         audio: "/audio"
         station: "/stations"
 
+flask_server:
+    host: "0.0.0.0"
+    port: 4000
+
 paths:
     segments_dir: "data/segments"
     detections_dir: "data/detections"
