--- a/station/config/static_config.yaml
+++ b/station/config/static_config.yaml
@@ -1,23 +1,16 @@
-db_api:
-    url: "http://192.168.0.37:3002/api"
-    routes:
-        detection: "/detections"
-        audio: "/audio"
-        station: "/stations"
+scripts:
+    start_capture: "main.py"
 
-flask_server:
-    host: "0.0.0.0"
-    port: 4000
+temp:
+    process: "/tmp/audiobirder_process.pid"
 
 paths:
+    configs_dir: "config"
     segments_dir: "data/segments"
     detections_dir: "data/detections"
     logs_dir: "data/logs"
     detections_log: "data/detections/detections.csv"
-
-websocket_stream:
-    url: "http://192.168.0.37:3002"
-
+    
 audio_capture:
     sample_rate: 48000
     channels: 1
