--- a/station/requirements.txt
+++ b/station/requirements.txt
@@ -48,6 +48,7 @@ pillow==11.2.1
 platformdirs==4.3.8
 pooch==1.8.2
 protobuf==5.29.5
+psutil==7.0.0
 pycparser==2.22
 pydub==0.25.1
 Pygments==2.19.1
