refactor pi flask into api. Remove state watcher thread, replace with station_startup service

--- a/station/config/static_config.yaml
+++ b/station/config/static_config.yaml
@@ -17,6 +17,12 @@ segmenter_config:
     detection_padding: 2
     sample_width: 2
 
+allowable_states:
+    - unannounced
+    - announced
+    - claimed
+    - configured
+
 birdnet:
     model: "BirdNet-Analyser"
     version: "v2.4"
