--- a/.gitignore
+++ b/.gitignore
@@ -155,7 +155,7 @@ dist
 # =============================================================================
 # Environment & Configuration
 # =============================================================================
-.env
+#.env
 .env.local
 .env.development.local
 .env.test.local
